fix(plan): delete only of response key
